<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="5dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/add_photo_site"
            android:paddingTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/grey_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/background_blue_grey"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="1dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhotos"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddPhoto"
            android:background="@drawable/button_green_light_green"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/add_photo"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="start"
                android:layout_marginTop="4dp"
                android:layout_weight="0.9"
                android:layout_marginEnd="3dp"
                android:textColor="@color/background_blue_grey"
                android:text="@string/include_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_marginStart="3dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:gravity="end"
                    android:background="@drawable/outline_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>