<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/details"
            android:paddingTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/grey_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/background_blue_grey"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="1dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDate"
                android:hint="@string/select_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivChevDown1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_weight="0.9"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivChevDown1"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_chev_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/etDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/grey_text"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="1.3dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnArea"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivChevDown2"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_chev_down"
                android:elevation="3dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/grey_text"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="1.3dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnTask"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivChevDown3"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_chev_down"
                android:elevation="3dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/grey_text"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="1.3dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/tags"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/grey_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/grey_text"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="1.3dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>